prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_return_float_to_int.nut
// EXPECTED: compile-time error - return float from int function
function fn(): int {
    return 3.14
}
return fn
